# text-stats

./: .gitignore  Cargo.toml  README.md
src/: main.rs
test_files/: sample1.txt  sample2.txt
