[package]
name = "text_stats"
version = "0.1.0"
edition = "2021"
authors = ["natsuoooooo"]
description = "A command-line tool to count lines, words, and characters in text files"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.8"
